--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            Это было самое начало пути. На этом этапе важно было проникнуться
-            основами и настроиться на учёбу. И, возможно, подумать, как новые
-            знания могут повлиять на ваше будущее.
+            Это было самое начало пути. На&nbsp;этом этапе важно было проникнуться
+            основами и&nbsp;настроиться на&nbsp;учёбу. И, возможно, подумать, как новые
+            знания могут повлиять на&nbsp;ваше будущее.
           </p>
-          <p class="card__paragraph">"Я готова и заряжена. Давайте уже сделаем это!"</p>
+          <p class="card__paragraph">"Я&nbsp;готова и&nbsp;заряжена. Давайте уже сделаем это!"</p>
           <div class="card__buttons">
             <button type="button" class="card__icon-button">
               <svg
@@ -94,13 +94,13 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            На первых этапах мы работали со страхами и сомнениями, которые часто
-            испытывают новички. Один из них — страх перед чистым листом. Это,
-            конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим
-            ощущением скрываются более глубокие вопросы: с чего начать? а вдруг
-            будет слишком сложно? что, если я не справлюсь?
+            На&nbsp;первых этапах мы&nbsp;работали со&nbsp;страхами и&nbsp;сомнениями, которые часто
+            испытывают новички. Один из&nbsp;них&nbsp;&mdash; страх перед чистым листом. Это,
+            конечно&nbsp;же, намного сложнее, чем боязнь куска бумаги. Часто за&nbsp;этим
+            ощущением скрываются более глубокие вопросы: с&nbsp;чего начать? а&nbsp;вдруг
+            будет слишком сложно? что, если я&nbsp;не&nbsp;справлюсь?
           </p>
-          <p class="card__paragraph">"Кажется, не все так сложно. Интересно, дальше так же?"</p>
+          <p class="card__paragraph">"Кажется, не&nbsp;все так сложно. Интересно, дальше так&nbsp;же?"</p>
           <div class="card__buttons">
             <button type="button" class="card__icon-button">
               <svg
@@ -156,11 +156,11 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            Первый проект — позади! Но это всё ещё самое начало пути. Радость
-            могла быстро померкнуть и смениться ожиданием провала. Или вы,
-            наоборот, могли вдохновиться успехами и поверить в себя.
+            Первый проект&nbsp;&mdash; позади! Но&nbsp;это всё ещё самое начало пути. Радость
+            могла быстро померкнуть и&nbsp;смениться ожиданием провала. Или&nbsp;вы,
+            наоборот, могли вдохновиться успехами и&nbsp;поверить в&nbsp;себя.
           </p>
-          <p class="card__paragraph">"Это было не так легко, как показалось!"</p>
+          <p class="card__paragraph">"Это было не&nbsp;так легко, как показалось!"</p>
           <div class="card__buttons">
             <button type="button" class="card__icon-button">
               <svg
@@ -216,10 +216,10 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы
-            понять, как много ещё впереди. Вы могли попытаться погнаться за
-            идеалом и понять, что он недостижим. А, может, вы вовсе и не
-            подвержены перфекционизму и вместо того, чтобы сделать идеально,
+            На&nbsp;этом этапе вы&nbsp;уже достаточно разбирались в&nbsp;основах вёрстки, чтобы
+            понять, как много ещё впереди. Вы&nbsp;могли попытаться погнаться за
+            идеалом и&nbsp;понять, что он&nbsp;недостижим. А, может, вы&nbsp;вовсе и&nbsp;не
+            подвержены перфекционизму и&nbsp;вместо того, чтобы сделать идеально,
             старались просто сделать.
           </p>
           <p class="card__paragraph">"Как все это запомнить?! Эти селекторы когда-нибудь кончатся?"</p>
@@ -278,12 +278,12 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            Всё это время вы были не одиноки (хотя, возможно, иногда и
+            Всё это время вы&nbsp;были не&nbsp;одиноки (хотя, возможно, иногда и
             чувствовали, что одни против целого мира). Вас окружали
-            одногруппники, команда сопровождения и просто близкие люди, которым
-            можно пожаловаться, если очередной макет просто так не поддавался.
+            одногруппники, команда сопровождения и&nbsp;просто близкие люди, которым
+            можно пожаловаться, если очередной макет просто так не&nbsp;поддавался.
             Осваивать что-то новое легче, когда рядом есть единомышленники, не
-            правда ли?
+            правда&nbsp;ли?
           </p>
           <p class="card__paragraph">"Деваться некуда... Нужно закончить что начато..."</p>
           <div class="card__buttons">
@@ -341,11 +341,11 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            На этом курсе вы постоянно решали разные задачи. В какой-то момент
+            На&nbsp;этом курсе вы&nbsp;постоянно решали разные задачи. В&nbsp;какой-то момент
             вам могло показаться, что решения просто иссякли. Значит, пришло
-            время посмотреть на задачу под другим углом.
+            время посмотреть на&nbsp;задачу под другим углом.
           </p>
-          <p class="card__paragraph">"Я никогда это не сделаю... Переведусь на следующий поток, отдохну, неспешно еще раз все повторю..."</p>
+          <p class="card__paragraph">"Я&nbsp;никогда это не&nbsp;сделаю... Переведусь на&nbsp;следующий поток, отдохну, неспешно еще раз все повторю..."</p>
           <div class="card__buttons">
             <button type="button" class="card__icon-button">
               <svg
@@ -401,10 +401,10 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            Во время учёбы часто возникает чувство, когда не знаешь, за что
-            хвататься. Вроде и проектную пора сдавать, и задачи хочется
-            порешать, и в теории получше разобраться, и жизнь не забыть пожить.
-            В такие моменты очень нужна концентрация. Вспомните, откуда вы её
+            Во&nbsp;время учёбы часто возникает чувство, когда не&nbsp;знаешь, за&nbsp;что
+            хвататься. Вроде и&nbsp;проектную пора сдавать, и&nbsp;задачи хочется
+            порешать, и&nbsp;в&nbsp;теории получше разобраться, и&nbsp;жизнь не&nbsp;забыть пожить.
+            В&nbsp;такие моменты очень нужна концентрация. Вспомните, откуда вы&nbsp;её
             черпали.
           </p>
           <p class="card__paragraph">"Если долго мучаться, что-нибудь получится!"</p>
@@ -463,14 +463,14 @@
         </div>
         <div class="card__text">
           <p class="card__paragraph">
-            Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
-            Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с
-            окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И
-            этот мир постоянно меняется. Познать его полностью не получится, но
-            это тот случай, когда важен сам процесс познания. Ведь часто путь —
-            и есть результат.
+            Сейчас вы&nbsp;уже очень много знаете о&nbsp;вёрстке. Но&nbsp;это только начало.
+            Во-первых, впереди ещё много материала про &laquo;красотищу&raquo;. Во-вторых, с
+            окончанием курса учёба не&nbsp;заканчивается. Вёрстка&nbsp;&mdash; это целый мир. И
+            этот мир постоянно меняется. Познать его полностью не&nbsp;получится, но
+            это тот случай, когда важен сам процесс познания. Ведь часто путь &mdash;
+            и&nbsp;есть результат.
           </p>
-          <p class="card__paragraph">"Я благодарна за курс, за всё, что узнала, и за возможность поверить в себя"</p>
+          <p class="card__paragraph">"Я&nbsp;благодарна за&nbsp;курс, за&nbsp;всё, что узнала, и&nbsp;за&nbsp;возможность поверить в&nbsp;себя"</p>
           <div class="card__buttons">
             <button type="button" class="card__icon-button">
               <svg
